# kkm_https_adapter

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.EN.md  README.ENG.md  README.md
_build/conf/: headers.json  kkmha.json  kkmha.test.ss.crt  kkmha.test.ss.key  mime.json
_build/conf/kkm/: 98765433456789.json
_build/static/: index.html  kkmha.css  kkmha.js  reports.html
_clang/: build_config.cmd  build_debug.cmd  build_dynamic_debug.cmd  build_dynamic_memprof.cmd  build_dynamic_release.cmd  build_mprof.cmd  build_release.cmd  build_static_debug.cmd  build_static_memprof.cmd  build_static_release.cmd  config_build.cmd  config_env.cmd  install_deps.cmd  install_dynamic_deps.cmd  install_static_deps.cmd  test.cmd  test_dynamic.cmd  test_static.cmd
_msvc/: build_debug.cmd  build_dynamic_debug.cmd  build_dynamic_memprof.cmd  build_dynamic_release.cmd  build_mprof.cmd  build_release.cmd  build_static_debug.cmd  build_static_memprof.cmd  build_static_release.cmd  config_build.cmd  config_env.cmd  install_deps.cmd  install_dynamic_deps.cmd  install_static_deps.cmd  test.cmd  test_dynamic.cmd  test_static.cmd  use_openssl_version_3.5.4.cmd
docs/: api.md  build.md  cli.md  config.md  details.md
examples/: cfg.php  cfg_public.php  json_test.cmd  kkmha_json_test.cmd  kkmjl_json_test.cmd  lib.php  looped_ping.php  looped_status.php  php_test.cmd  request_inflation_test.php  test_cash_in.php  test_cash_out.php  test_cash_stat.php  test_close_shift.php  test_full_status.php  test_learn.php  test_print_close_shift_reports.php  test_print_fn_registrations.php  test_print_last_document.php  test_print_non_fiscal_doc.php  test_print_ofd_exchange_status.php  test_print_ofd_test.php  test_reset_registry.php  test_sell.php  test_sell_return.php  test_status.php
examples/json/: base-status.json  cash-in.json  cash-out.json  cash-stat.json  close-shift.json  full-status.json  learn.json  print-close-shift-reports.json  print-demo.json  print-fn-registrations.json  print-info.json  print-last-document.json  print-non-fiscal-doc.json  print-ofd-exchange-status.json  print-ofd-test.json  report-x.json  reset-state.json  sell-return.json  sell.json  status.json
examples/lib/Kkm/: ConnParams.php  DevOp.php  Device.php  DeviceOperation.php  GetOperation.php  GetOperationTrait.php  PaymentType.php  PostOperation.php  PostOperationTrait.php  ReceiptTrait.php  ServerOperation.php  SetCashSumTrait.php  SetOperatorTrait.php  SrvOp.php  Tax.php  Utils.php
examples/lib/Kkm/Operations/: BaseStatus.php  CashIn.php  CashOut.php  CloseShift.php  FullStatus.php  Learn.php  Ping.php  PrintCloseShiftReports.php  PrintDemo.php  PrintFnRegistrations.php  PrintInfo.php  PrintNonFiscalDoc.php  PrintOfdTest.php  ReportX.php  ResetRegistry.php  ResetState.php  Sell.php  SellReturn.php
examples/php/: cfg.php  looped_ping.php  test_base_status.php  test_cash_in.php  test_learn.php  test_print_close_shift_reports.php  test_print_demo.php  test_print_info.php  test_print_ofd_test.php  test_report_x.php  test_reset_state.php  test_static.php  test_status.php
examples/php/lib/Kkm/: Device.php  GetOperationTrait.php  Performer.php  Server.php  SetCashSumTrait.php  SetIdempotencyKeyTrait.php  SetOperatorTrait.php
examples/php/lib/Kkm/Operations/: CashOut.php  CashStat.php  FullStatus.php  Learn.php  PrintCloseShiftReports.php  PrintLastDocument.php  PrintOfdExchangeStatus.php  ResetRegistry.php  Sell.php  Status.php
incl/: cmake_options.h.in
incl/lib/: CMakeLists.txt  basic.h  datetime.cpp  datetime.h  except.h  json.h  memprof.h  meta.h  numeric.h  setcoacp.h  setcou16.h  setcoutf8.h  slapp.h  text.h  utils.cpp  utils.h
php/: cfg.php  lib.php  request_inflation_test.php  test_print_demo.php  test_print_info.php  test_print_ofd_exchange_status.php  test_report_x.php  test_reset_registry.php  test_reset_state.php  test_static.php
php/lib/Kkm/: Device.php  GetOperation.php  PaymentType.php  Performer.php  PostOperation.php  Server.php  SetIdempotencyKeyTrait.php  Utils.php
php/lib/Kkm/Operations/: CashStat.php  PrintFnRegistrations.php  PrintLastDocument.php  PrintNonFiscalDoc.php  PrintOfdExchangeStatus.php  PrintOfdTest.php  ResetState.php  SellReturn.php  Status.php
src/: CMakeLists.txt  asio.h  binary_response.h  config.cpp  config.h  config_handler.cpp  config_handler.h  counter.h  default_handler.cpp  default_handler.h  defaults.h  favicon.h  helper_main.cpp  hitman.h  http.h  http_cache.cpp  http_cache.h  http_parser.cpp  http_parser.h  http_req_handler.h  http_request.h  http_res_data.h  http_response.h  json_response.h  kkm.cpp  kkm.h  kkm_handler.cpp  kkm_handler.h  kkmha_config.h.in  kkmha_main.cpp  library.cmake  log.cpp  log.h  messages.h  ping_handler.cpp  ping_handler.h  server.cpp  server.h  server_hitman.h  service.cpp  (+4 more)
src/cmake/: incl.cmake  options.h.in  variables.h.in
src/kkmha/: CMakeLists.txt  asio.h  http_binary_response.h  http_constant_response.h  http_defaults.h  http_json_response.h  http_parser.cpp  http_parser.h  http_proto_response.h  http_request.h  http_response.h  http_solid_response.h  http_strings.h  http_types.h  kkmha_main.cpp  kkmha_variables.cpp  server_cache_core.cpp  server_cache_core.h  server_cache_strings.h  server_cache_types.h  server_config_handler.cpp  server_config_handler.h  server_core.cpp  server_core.h  server_counter.h  server_default_handler.cpp  server_default_handler.h  server_default_strings.h  server_defaults.h  server_failure.h  server_favicon.h  server_hitman.h  server_kkmop_defauls.h  server_kkmop_handler.cpp  server_kkmop_handler.h  server_kkmop_strings.h  server_ping_handler.cpp  server_ping_handler.h  server_proto_handler.h  server_static_defaults.h  (+16 more)
src/kkmjl/: CMakeLists.txt  kkmjl_core.h  kkmjl_main.cpp  kkmjl_strings.h  kkmjl_variables.cpp
src/kkmop/: CMakeLists.txt  kkmop_core.h  kkmop_main.cpp  kkmop_strings.h  kkmop_variables.cpp
tests/: CMakeLists.txt  lib_datetime.cpp  lib_defer.cpp  lib_json.cpp  lib_numeric.cpp  lib_path.cpp  lib_text.cpp  lib_utils.cpp  lib_wconv.cpp
